# highway

./: .gitignore  Dockerfile  LICENSE  README.md  build_and_run_image.sh
highway/: .gitignore  CMakeLists.txt  imextract.m  kontur.txt  kontur2.txt  main.cpp  plotter.m  road.txt  traffic.cpp  traffic.h  unittests.cpp  unittests.h  window.cpp  window.h
highway/cppfiles/: button.cpp  car.cpp  main.cpp  road.cpp  roadnode.cpp  roadsegment.cpp  screen0.cpp  screen1.cpp  screen2.cpp  screen3.cpp  simulation.cpp  simulation2.cpp  traffic.cpp  unittests.cpp  util.cpp
highway/headers/: button.h  car.h  cscreen.h  road.h  roadnode.h  roadsegment.h  screen0.h  screen1.h  screen2.h  screen3.h  screens.h  simulation.h  simulation2.h  traffic.h  unittests.h  util.h
latex/: fig1.tif  fig2.tif  report.aux  report.bbl  report.bcf  report.bib  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
